added marquee effect on small device

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,23 @@
   grid-template-columns: repeat(6, 2fr);
   grid-template-rows: repeat(6, 2fr);
 }
+
+.marquee {
+  overflow: hidden;
+  display: flex;
+}
+
+.marquee-content {
+  display: flex;
+  animation: scroll 15s linear infinite;
+  min-width: 200%;
+}
+
+@keyframes scroll {
+  from {
+      transform: translateX(0);
+  }
+  to {
+      transform: translateX(-50%);
+  }
+}
